1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rwapp-svc
spec:
  type: ClusterIP
  selector:
    app: rwapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
