1.10/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rwapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rwapp-svc
          servicePort: 2345
